[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/icon96.png" type="Texture" id=1]
[ext_resource path="res://prefabs/block/Block.gd" type="Script" id=2]
[ext_resource path="res://images/frame96.png" type="Texture" id=3]
[ext_resource path="res://prefabs/building/Building.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="Block" type="Area2D"]
script = ExtResource( 2 )
building = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Frame" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Block_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Block_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Block_mouse_exited"]
